@@ -1,0 +1,1 @@
+ALTER TABLE `zone_points` MODIFY COLUMN `version` int(11) NOT NULL DEFAULT 0 AFTER `zone`;
